create figure reference - this works

--- a/Sections/09_Chapter_2.Rmd
+++ b/Sections/09_Chapter_2.Rmd
@@ -53,12 +53,17 @@ Considering overall- and ethnicity-specific performance, the GLMNET algorithm wa
 For each sample, PlaNET returns a probability that the sample is African, Asian or Caucasian and the final classification is defined by the ethnicity class with the highest of these probabilities.
 We reason that these probabilities have the potential to identify samples with mixed ancestry or ethnicity.
 Therefore, we implemented a threshold function on PlaNET's probability outputs that classifies samples as 'Ambiguous' if the highest of the three class-specific probabilities is below 0.75 (Material and Methods, Additional file 2: Figure S3).
-This resulted in 7 self-reported African, 12 Asian, and 13 Caucasian samples as being classified as ambiguous, which led to a slight decrease in performance (Figure 1a).
+This resulted in 7 self-reported African, 12 Asian, and 13 Caucasian samples as being classified as ambiguous, which led to a slight decrease in performance (Figure @ref(fig:ch2-fig1).
 However, we note that because genetic ancestry is on a continuum and due to the limitations of self-reported ethnicity, there are likely to be individuals of mixed ancestry/ethnicity in our sample set, and therefore hypothesize that a model that includes an ambiguous class is more realistic and accurate than one without.
 Cross validation, where training/validation subsets were created based on cohort-identity, yielded an overall accuracy of 0.900, a Kappa of 0.738, and a positive predictive value of 0.944 (Figure 1a), which was consistent when examining performance by dataset (Additional file 2: Figure S4).
 
-[INSERT FIGURE 1] Figure 1.
-Evaluating PlaNET's performance and characterizing ethnicity-predictive HM450K sites.
+This text will render with a figure referenced (Figure @ref(fig:figureTitle)).
+
+```{r ch2-fig1, eval = T, echo = T, echo=FALSE, fig.cap="Evaluating PlaNET\'s performance and characterizing ethnicity-predictive HM450K sites. We developed PlaNET (Placental elastic net ethnicity classifier), using placental HM450K data and evaluated its classification performance using leave-one-dataset-out cross validation.",  out.extra=''}
+
+knitr::include_graphics(here::here('images', 'ch2', 'Figure 1.pdf'))
+```
+
 
 Ethnicity-predictive sites on the HM450K array are largely linked to genetic variation To better understand the basis of PlaNET's ethnicity prediction, we examined the 1860 sites [Additional file 1: Table S1] automatically-selected by the GLMNET model. These sites were enriched for SNP probes, containing 15 of the 59 SNPs explicitly measured on both HM450K and EPIC DNAme arrays (p \< 1e-16). Of the remaining 1845 DNAme sites, we found significant enrichment for sites linked to genetic variation: 802 sites (43.1%) have a documented SNP in either the probe body, CpG site of interrogation, or the single base extension site (p \< 1e-16) [@daca-roszak2015], and 220 sites (11.8%) corresponded to previously identified placental-specific methylation quantitative trait loci (mQTLs) [@delahaye2018] (p \< 1e-16, Figure 1b). With respect to chromosomal location, we found significant enrichment for ethnicity-predictive sites on chromosomes 2 (p \< 0.01), 15 (p \< 0.05), and 17 (p \< 0.05) (Additional file 2: Figure S5a). With respect to CpG density, we found significant enrichment for ethnicity-predictive sites in OpenSea (p \< 0.001) and South Shore (p \< 0.05) regions (Additional file 2: Figure S5b), where relatively neutral (unselected) genetic variation is more likely to be located [@walser2010]. Pathway analysis for GO and KEGG terms for genes associated with the 1860 sites, found only one significant (p \< 0.05) GO term (homophilic cell adhesion via plasma membrane adhesion molecules). DNAme -inferred ethnicity and genetic ancestry To test the ability of PlaNET to identify individuals of mixed ancestry, we examined whether samples classified as 'ambiguous' were also intermediate with respect to genetically-defined ancestry. Genetic ancestry was inferred from 50 ancestry informative genotyping markers (AIMs) in samples from cohorts C4 and C5 (n = 109), using 1000 Genomes Project samples as reference populations [@gibbs2015; @delgobbo2018]. These 50 markers were previously selected based on their ability to differentiate between African, European, East Asian, and South Asian populations [@delgobbo2018].
 Plotting the first two multi-dimensional scaling coordinates calculated on the 50 AIMs in (Figure 2), shows a handful of samples intermediate to three more distinct ancestry clusters.
