some additions to chapter 2

--- a/Sections/09_Chapter_2.Rmd
+++ b/Sections/09_Chapter_2.Rmd
@@ -54,7 +54,8 @@ kableExtra::kbl(
   kableExtra::footnote(symbol = 'Ethnicity/ancestry as defined in associated study')
 ```
 
-DNAme studies using placental tissue is of particular interest because the functioning of the placenta is essential to a healthy pregnancy [@robinson2015; @robinson2019]. Although many DNAme alterations associated with placental-mediated diseases have been identified [@yeung2016; @wilson2018; @rong2015; @konwar2018], the incidence of many of these conditions vary by population [@bryant2010; @xiao2014; @rosenberg2005].
+DNAme studies using placental tissue is of particular interest because the functioning of the placenta is essential to a healthy pregnancy [@robinson2015; @robinson2019].
+Although many DNAme alterations associated with placental-mediated diseases have been identified [@yeung2016; @wilson2018; @rong2015; @konwar2018], the incidence of many of these conditions vary by population [@bryant2010; @xiao2014; @rosenberg2005].
 In this study we developed PlaNET (Placental DNAme Elastic Net Ethnicity Tool), an ethnicity classifier using DNAme and genotyping data measured on the HM450K array in multiple cohorts of placentas from North America.
 PlaNET was developed on overlapping sites from HM450K and the newer Illumina MethylationEPIC BeadChip array (EPIC) to ensure compatibility with future studies.
 We show that PlaNET out-performs existing methods in predicting ethnicity in placental tissue and can produce accurate measures of genetic ancestry.
@@ -156,7 +157,16 @@ knitr::include_graphics(here::here('images', 'ch2', 'Figure 4.pdf'))
 
 Application of PlaNET in an EWAS setting Lastly, to demonstrate the utility of applying PlaNET to placental DNAme data, we applied PlaNET to obtain ethnicity classifications across two previously published EWAS studies using three datasets (Table 3, Additional file 2: Figure S9).
 We note that this includes samples from cohorts C4 and C5 that were used to develop PlaNET.
-One study used discovery GSE100197 (n = 102) and validation GSE98224 (n = 48) datasets to investigate DNAme alterations associated with preeclampsia status [@wilson2018]. We reasoned that correction for ethnicity should decrease false positives in the EWAS and therefore increase concordance between hits identified in the two data sets. In the original EWAS, with no adjustment for ethnicity, our group reported that 599 out of the 1703 (35.1%) significant associations found in the discovery cohort were also significant in the validation cohort, and the correlation of the difference in mean DNAme between controls and preeclampsia-affected samples (i.e. delta betas) at FDR significant sites between discovery and validation was 0.62 [@wilson2018]. When we repeated the analysis while adjusting for ethnicity determined by PlaNET, the number of preeclampsia-associated sites that overlapped between cohorts increased to 651/1614 (40.3%) [Additional file 1: Table S5], and the correlation between delta betas increased to 0.66. We also found that repeating gene set enrichment analysis, which originally found nothing significant [@wilson2018], yielded several significantly enriched GO terms such as developmental process, inflammatory response and cell adhesion [Additional file 1: Table S6]. Next, because adjustment for population stratification can not only be done via correction in linear modelling, but can also be done by stratifying an analysis by population identity, we performed a secondary EWAS confined to samples predicted as Caucasians (n = 71/102 for discovery, n = 28/48 for validation). This resulted in a decrease in overlap in preeclampsia-associated sites between cohorts: 359/1488 (17%) [Additional file 1: Table S7], although the correlation between delta betas remained high (r = 0.67), indicating the observed decrease in overlap between significantly differentially methylated sites was likely due to a decrease in power from smaller sample size (particularly in the validation group) rather than a decrease in concordance between cohorts. PlaNET can be useful for checking for discrepancies in self-reported ethnicity information. We tested whether PlaNET could identify the ethnicity of samples from an all-Caucasian population. GSE71678 (n = 343), a cohort not used in the development of PlaNET, consisted of DNAme data from placental samples collected from a New Hampshire, USA birth cohort that investigated the effects of arsenic exposure on placental DNAme [@green2016].
+One study used discovery GSE100197 (n = 102) and validation GSE98224 (n = 48) datasets to investigate DNAme alterations associated with preeclampsia status [@wilson2018].
+We reasoned that correction for ethnicity should decrease false positives in the EWAS and therefore increase concordance between hits identified in the two data sets.
+In the original EWAS, with no adjustment for ethnicity, our group reported that 599 out of the 1703 (35.1%) significant associations found in the discovery cohort were also significant in the validation cohort, and the correlation of the difference in mean DNAme between controls and preeclampsia-affected samples (i.e. delta betas) at FDR significant sites between discovery and validation was 0.62 [@wilson2018].
+When we repeated the analysis while adjusting for ethnicity determined by PlaNET, the number of preeclampsia-associated sites that overlapped between cohorts increased to 651/1614 (40.3%) [Additional file 1: Table S5], and the correlation between delta betas increased to 0.66.
+We also found that repeating gene set enrichment analysis, which originally found nothing significant [@wilson2018], yielded several significantly enriched GO terms such as developmental process, inflammatory response and cell adhesion [Additional file 1: Table S6].
+Next, because adjustment for population stratification can not only be done via correction in linear modelling, but can also be done by stratifying an analysis by population identity, we performed a secondary EWAS confined to samples predicted as Caucasians (n = 71/102 for discovery, n = 28/48 for validation).
+This resulted in a decrease in overlap in preeclampsia-associated sites between cohorts: 359/1488 (17%) [Additional file 1: Table S7], although the correlation between delta betas remained high (r = 0.67), indicating the observed decrease in overlap between significantly differentially methylated sites was likely due to a decrease in power from smaller sample size (particularly in the validation group) rather than a decrease in concordance between cohorts.
+PlaNET can be useful for checking for discrepancies in self-reported ethnicity information.
+We tested whether PlaNET could identify the ethnicity of samples from an all-Caucasian population.
+GSE71678 (n = 343), a cohort not used in the development of PlaNET, consisted of DNAme data from placental samples collected from a New Hampshire, USA birth cohort that investigated the effects of arsenic exposure on placental DNAme [@green2016].
 PlaNET determined 342 samples were classified as Caucasian, and 1 sample had a high probability of belonging to the Caucasian group (Probability = 0.73) but was below our confidence threshold and was therefore classified as 'ambiguous', confirming ethnic homogeneity was high in this cohort and adjustment for population stratification was not needed in this study.
 
 \captionsetup{width=7in}
