--- a/main_script.Rmd
+++ b/main_script.Rmd
@@ -37,6 +37,7 @@ library("kableExtra")
 library("dplyr")
 library("tibble")
 library("readr")
+library(readxl)
 ```
 
 <!-- Title page -->
@@ -258,7 +259,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \setcounter{equation}{0}
 
 
-```{r appendix_a, child = '~/GitHub/FishForVisa/Scripts/supplements.Rmd', eval = F}
+```{r appendix_a, child = './Sections/13_Appendix_A.Rmd', eval = T}
 ```
 
 
@@ -276,7 +277,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \setcounter{equation}{0}
 
 
-```{r appendix_b, child = '~/GitHub/TransEmergence/Scripts/Supplements.Rmd', eval = F}
+```{r appendix_b, child = './Sections/14_Appendix_B.Rmd', eval = F}
 ```
 
 <!-- ## Appendix C -->
@@ -294,7 +295,7 @@ NOTE: Remove normal markdown chapters before rendering to PDF  -->
 \setcounter{equation}{0}
 
 
-```{r appendix_c, child = '~/GitHub/OC_Transboundary/Ecol/Supplements.Rmd', eval = F}
+```{r appendix_c, child = './Sections/15_Appendix_C.Rmd', eval = F}
 ```
 
 
