--- a/Sections/14_Appendix_B.Rmd
+++ b/Sections/14_Appendix_B.Rmd
@@ -7,9 +7,10 @@ output:
 bibliography: ../References/references.bib
 ---
 
-(ref:FigB1-cap) Title. Caption.
+(ref:figb1-cap) Fluorescence-activated cell-sorting and immune fluorescence staining. A) Fluorescence-activated cell-sorting (FACS) workflow schematic. B-E) Immunofluorescence staining (IF) of term cell-sorted sample with known characteristic cell type markers that were not selected for in the FACS procedure. Nuclei are shown via DAPI staining (blue). Scale bars: 100µm. B) Trophoblasts (KRT7: green, VIM: red). C) Hofbauer cells (CD68: green). D) Endothelial cells (CD31: green). E) Stromal cells (VIM: red).
 
-```{r FigB1, fig.cap="(ref:FigB1-cap)", eval=FALSE, echo=T, echo=FALSE, fig.align='center', out.extra=''}
+
+```{r figb1, fig.cap="(ref:figb1-cap)", eval=TRUE, echo=T, echo=FALSE, fig.align='center', out.extra=''}
 knitr::include_graphics(here::here('Images', 'appendix-b', 'Figure S1.pdf'))
 ```
 
@@ -17,7 +18,7 @@ knitr::include_graphics(here::here('Images', 'appendix-b', 'Figure S1.pdf'))
 
 \captionsetup{width=7in}
 
-```{r TabB1, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
+```{r tabb1, eval = FALSE, echo = T, echo=FALSE, warning = FALSE, message=FALSE,  out.extra=''}
 readxl::read_csv(here::('Tables', 'appendix-b', 'Table S1.csv')) %>%
   kableExtra::kbl(
   booktabs = TRUE,
